cleaned the files for netflix

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,15 @@
 <html>
   <head>
-
+    <meta charset="UTF-8">
+		<title>Netflix</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="/static/main.css">
+		<link rel="stylesheet" type="text/css" media="(max-width: 850px)" href="/static/medium.css">
     {% block head %}
     <title>{% block title %} {% endblock %} - My Application</title>
     {% endblock %}
   </head>
   <body>
-    <p>this is from base</p>
     {% block body %}
     <p>can be overwritten</p>
     {% endblock %}
