--- a/templates/netflix.html
+++ b/templates/netflix.html
@@ -1,5 +1,4 @@
-
-<!-- Requirement 1: Navigate to this page from hello.py-->
+<!-- Requirement 1: Navigate to this netflix.html using view function from hello.py-->
 <!-- Requirement 2: Extends base.html and use block head from base.html-->
 <!-- Requirement 3: Use a Jinja2 forloop for genre in the Nav Bars-->
 
